nullaway_error_369C0825-3425-401F-A981-C01784144756.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-expression/src/main/java/org/springframework/expression/spel/support/ReflectivePropertyAccessor.java:191: error: [NullAway] dereferenced expression invoker is @Nullable
					return new TypedValue(value, invoker.typeDescriptor.narrow(value));
					                                    ^
    (see http://t.uber.com/nullaway )
